--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion '30.0.3'
 
     defaultConfig {
-        applicationId "com.makgyber.vbuys"
+        applicationId "com.makgyber.vsells"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
